added index.html changed location of image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images\support.jpg" alt="Call Support picture">
+      <td><img src="support.jpg" alt="Call Support picture">
       </td>
       <td>
         <p><em>
