--- a/hobbies.html
+++ b/hobbies.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Hobbies</title>
-  </head>
-  <body>
-    <h3>My Hobbies</h3>
-    <ol>
-      <li><a href="https://www.massivelyop.com">Gaming</a></li>
-      <li><a href="https://www.netflix.com">Netflix</a></li>
-      <li><a href="https://www.bol.com">Reading</a></li>
-    </ol>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>My Hobbies</title>
+</head>
+
+<body>
+  <h3>My Hobbies</h3>
+
+  <ol>
+    <li><a href="https://www.massivelyop.com">Playing MMORPG's</a></li>
+    <li><a href="https://www.netflix.com">Netflix</a></li>
+    <li><a href="https://www.bol.com">Reading</a></li>
+  </ol>
+
+<hr>
+
+</body>
+
 </html>
