--- a/contact-me.html
+++ b/contact-me.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contact</title>
-  </head>
-  <body>
-    <h1>Contact me</h1>
-    <p>Eric Schouw </p>
-    <p>P.L. Janssenstraat 48</p>
-    <p>Willemstad</p>
-    <p>Curacao </p>
 
-    <hr>
+<head>
+  <meta charset="utf-8">
+  <title>Contact me</title>
+</head>
 
-<form class="" action="mailto:ericjegamer@gmail.com" method="post" enctype="text/plain">
-  <label>Your Name:</label>
-  <input type="text" name="YourName" value=""><br>
-  <label>Your Email:</label>
-  <input type="email" name="YourEmail" value=""><br>
-  <label>Your Message:</label><br>
-  <textarea name="YourMessage" rows="10" cols="30"></textarea>
-  <input type="submit" name="">
-</form>
-  </body>
+<body>
+  <h1>My contact details</h1>
+  <p>My fictional Adress</p>
+  <p>0124567890</P>
+  <P>email@email.nl </p>
+  </p>
+<hr>
+  <form class="" action="mailto:ericschouw@outlook.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <label>Your Message:</label><br>
+    <textarea name="yourMessage" rows="8" cols="30"></textarea><br>
+    <input type="submit" name="">
+  </form>
+</body>
+
 </html>
