--- a/index.html
+++ b/index.html
@@ -9,71 +9,77 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="support.jpg" alt="Call Support picture">
-      </td>
+      <td><img src="Images\image_for_webdev_bootcamp_course.png" alt="Eric profile picture"></td>
       <td>
-        <p><em>
-            <h1>Eric Schouw</h1>
-            Founder and CEO of <strong><a href="https://www.webfactory.co.uk/">The Web Factory</a></strong>
-          </em></p>
+        <h1>Eric Schouw</h1>
+        <p><em>I want to learn new things each day, web development is what i want to do; so i need to lean some stuff; HTML, CSS, javascript, Bootstrap,
+          Jquery, DOM, the list is endless,
+          luckely i found the best full stack web development course on the internet <strong><a href="https://www.udemy.com/the-complete-web-development-bootcamp/">
+            The Complete 2019 Web Development Bootcamp! </a></strong></em></p>
+</body>
+<p>A web developer in the making, living and working at Curacao</p>
+</td>
+</tr>
+</table>
 
-        <br>
-        <p>I am a professional Web Developer, living in Curacao. I also love playing PC games</p>
-      </td>
-    </tr>
-  </table>
 
-  <br>
-
-  <hr>
-  <h3>Education</h3>
-
-</html>
-
+<hr>
+<h3>Education</h3>
 <ul>
-  <li>Haagse Hogeschool, HBO Social Work</li>
-  <li>Boerhave College Leiden, HAVO</li>
-  <li>MBO Informatica, Roosendaal</li>
-  <li>MAVO, Huijbergen</li>
+  <li>Haagse Hogeschool, HBO Social Work, Den Haag, the Netherlands</li>
+  <li>MBO ICT, Roosendaal, the Netherlands</li>
+  <li>HAVO, Leiden, the Netherlands</li>
+  <li>MAVO, Huijbergen, the Netherlands</li>
 </ul>
 <hr>
-<h3>Work Experience</h3>
+<h3>Work Expeience</h3>
 
-<table cellspacing = "10">
+<table cellspacing="10">
   <thead>
     <tr>
       <th>Dates</th>
       <th>Work</th>
     </tr>
+
   </thead>
   <tbody>
     <tr>
-      <td>2010-2103</td>
-      <td>Service Desk Engineer at UWV Rotterdam</td>
+      <td>2016-2019</td>
+      <td>System Engineer</td>
     </tr>
+
     <tr>
-      <td>2010</td>
-      <td>Engineer at Philips Eindhoven</td>
+      <td>2016</td>
+      <td>Service Desk Employee</td>
     </tr>
   </tbody>
+  <tfoot>
+
+  </tfoot>
 
 </table>
 <hr>
 <h3>Skills</h3>
-<table cellspacing = "10">
-  <tr>
-    <td>iOS development ⭐⭐⭐⭐⭐</td>
-    <td>Photography ⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Web development ⭐⭐⭐⭐⭐</td>
-    <td>Painting ⭐</td>
-  </tr>
 
 
+
+<table cellspacing="10">
+  <tr>
+    <td>iOS development</td>
+    <td>⭐</td>
+  </tr>
+  <tr>
+    <td>Web Development</td>
+    <td>⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>Photography</td>
+    <td>⭐⭐</td>
+  </tr>
 </table>
+
+
 <hr>
-<br>
 <a href="hobbies.html">My Hobbies</a>
-<a href="contact-me.html">Contact me</a>
-</body>
+<br>
+<a href="contact-me.html">Contact Me</a>
