--- a/inputs.html
+++ b/inputs.html
@@ -2,19 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Input types</title>
+    <title>Forms</title>
   </head>
   <body>
-    <form class="" action="index.html" method="post">
-
-      <input type="text" name="" value=""><br>
-      <input type="submit" name="" value=""><br>
-      <input type="file" name="" value=""><br>
-      <input type="date" name="" value=""><br>
-      <input type="radio" name="" value=""><br>
-      <input type="range" name="" value=""><br>
-
-
+    <form>
+      <input type="text"><br>
+      <input type="submit"><br>
+      <input type="file"><br>
+      <input type="date"><br>
+      <input type="radio"><br>
+      <input type="range"><br>
     </form>
   </body>
 </html>
